Added notes for Elasticsearch